@@ -8,22 +8,28 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.broadinstitute.consent.http.cloudstore.GCSService;
 import org.broadinstitute.consent.http.db.FileStorageObjectDAO;
+import org.broadinstitute.consent.http.enumeration.DocumentEntity;
 import org.broadinstitute.consent.http.enumeration.FileCategory;
 import org.broadinstitute.consent.http.models.FileStorageObject;
+import org.broadinstitute.consent.http.models.Study;
+import org.broadinstitute.consent.http.models.User;
 import org.broadinstitute.consent.http.util.ConsentLogger;
 
 public class FileStorageObjectService implements ConsentLogger {
 
   GCSService gcsService;
   FileStorageObjectDAO fileStorageObjectDAO;
+  DatasetService datasetService;
 
   public FileStorageObjectService(
-      FileStorageObjectDAO fileStorageObjectDAO, GCSService gcsService) {
+      FileStorageObjectDAO fileStorageObjectDAO,
+      GCSService gcsService,
+      DatasetService datasetService) {
     this.fileStorageObjectDAO = fileStorageObjectDAO;
     this.gcsService = gcsService;
+    this.datasetService = datasetService;
   }
 
   FileStorageObject uploadAndStoreFile(
@@ -78,11 +84,9 @@ public class FileStorageObjectService implements ConsentLogger {
     try {
       Map<BlobId, InputStream> documentMap =
           gcsService.getDocuments(
-              fileStorageObjects.stream()
-                  .map(FileStorageObject::getBlobId)
-                  .collect(Collectors.toList()));
+              fileStorageObjects.stream().map(FileStorageObject::getBlobId).toList());
 
-      fileStorageObjects.forEach((fso) -> fso.setUploadedFile(documentMap.get(fso.getBlobId())));
+      fileStorageObjects.forEach(fso -> fso.setUploadedFile(documentMap.get(fso.getBlobId())));
     } catch (NotFoundException e) {
       throw e; // pass along
     } catch (Exception e) {
@@ -99,6 +103,63 @@ public class FileStorageObjectService implements ConsentLogger {
     return fileStorageObject;
   }
 
+  public FileStorageObject fetchMetadataByEntityIdAndId(
+      String entityId, Integer fileStorageObjectId) throws NotFoundException {
+    FileStorageObject fileStorageObject =
+        fileStorageObjectDAO.findActiveFileByIdAndEntityId(entityId, fileStorageObjectId);
+    if (fileStorageObject == null) {
+      throw new NotFoundException("File not found");
+    }
+    return fileStorageObject;
+  }
+
+  public List<FileStorageObject> fetchAllMetadataByEntityAndEntityIdForRead(
+      User user, String entity, String entityId) throws NotFoundException {
+    String fsoEntityId = resolveFsoEntityIdForRead(user, entity, entityId);
+    return fetchAllMetadataByEntityId(fsoEntityId);
+  }
+
+  public FileStorageObject fetchMetadataByEntityAndEntityIdForRead(
+      User user, String entity, String entityId, Integer fileStorageObjectId)
+      throws NotFoundException {
+    String fsoEntityId = resolveFsoEntityIdForRead(user, entity, entityId);
+    return fetchMetadataByEntityIdAndId(fsoEntityId, fileStorageObjectId);
+  }
+
+  private String resolveFsoEntityIdForRead(User user, String entity, String entityId) {
+    DocumentEntity documentEntity =
+        DocumentEntity.fromValue(entity)
+            .orElseThrow(() -> new NotFoundException("Entity not found"));
+
+    return switch (documentEntity) {
+      case DATASET -> resolveDatasetFsoEntityIdForRead(entityId, user);
+      case STUDY -> resolveStudyFsoEntityIdForRead(entityId, user);
+    };
+  }
+
+  private String resolveDatasetFsoEntityIdForRead(String entityId, User user) {
+    Integer datasetId = parseNumericEntityId(entityId);
+    datasetService.findDatasetByIdForRead(user, datasetId);
+    return datasetId.toString();
+  }
+
+  private String resolveStudyFsoEntityIdForRead(String entityId, User user) {
+    Integer studyId = parseNumericEntityId(entityId);
+    Study study = datasetService.findStudyByIdForRead(user, studyId);
+    if (study.getUuid() == null) {
+      throw new NotFoundException("Entity not found");
+    }
+    return study.getUuid().toString();
+  }
+
+  private Integer parseNumericEntityId(String entityId) {
+    try {
+      return Integer.valueOf(entityId);
+    } catch (NumberFormatException _) {
+      throw new NotFoundException("Entity not found");
+    }
+  }
+
   public List<FileStorageObject> fetchAllByEntityId(String entityId) throws NotFoundException {
     List<FileStorageObject> fileStorageObjects = fileStorageObjectDAO.findFilesByEntityId(entityId);
     // download all files from GCS
@@ -113,5 +174,9 @@ public class FileStorageObjectService implements ConsentLogger {
     // download all files from GCS
     fetchAndPopulateMultipleUploadedFiles(fileStorageObjects);
     return fileStorageObjects;
+  }
+
+  public List<FileStorageObject> fetchAllMetadataByEntityId(String entityId) {
+    return fileStorageObjectDAO.findFileMetadataByEntityId(entityId);
   }
 }
